tab view overflow fix

--- a/src/app/views/tab-view/tab-view.component.scss
+++ b/src/app/views/tab-view/tab-view.component.scss
@@ -23,6 +23,7 @@
             left: 0;
             width: 100%;
             height: 100%;
+            overflow: auto;
     
             &:not(.selected) {
                 opacity: 0;
